<resources>
    <string name="app_name">GoncalvesShop</string>
    <string name="welcome_text">Welcome to the Gonçalves Shop!</string>
    <string name="application_heading">Gonçalves Shop</string>
    <string name="welcome_description">With a Click of a Button, There Are Numerous Products to Choose From</string>
    <string name="shopping_button">Begin Shopping</string>
    <string name="checkout_button">Proceed to Checkout</string>
    <string name="album_subtotal_1">$0.00</string>
    <string name="album_subtotal_2">$0.00</string>
    <string name="album_subtotal_3">$0.00</string>
    <string name="album_subtotal_4">$0.00</string>
    <string name="album_subtotal_5">$0.00</string>
    <string name="album_subtotal_6">$0.00</string>
    <string name="album_subtotal_7">$0.00</string>
    <string name="album_subtotal_8">$0.00</string>
    <string name="album_subtotal_9">$0.00</string>
    <string name="album_subtotal_10">$0.00</string>
    <string name="album_price_1">$14.99</string>
    <string name="album_price_2">$20.99</string>
    <string name="album_price_3">$20.99</string>
    <string name="album_price_4">$20.99</string>
    <string name="album_price_5">$20.99</string>
    <string name="album_price_6">$20.99</string>
    <string name="album_price_7">$20.99</string>
    <string name="album_price_8">$20.99</string>
    <string name="album_price_9">$20.99</string>
    <string name="album_price_10">$20.99</string>
    <string name="album_quantity_1">0</string>
    <string name="album_quantity_2">0</string>
    <string name="album_quantity_3">0</string>
    <string name="album_quantity_4">0</string>
    <string name="album_quantity_5">0</string>
    <string name="album_quantity_6">0</string>
    <string name="album_quantity_7">0</string>
    <string name="album_quantity_8">0</string>
    <string name="album_quantity_9">0</string>
    <string name="album_quantity_10">0</string>
    <string name="album_description_1">One of the definitive \'80s rock albums.</string>
    <string name="album_description_2">One of the definitive \'80s rock albums.</string>
    <string name="album_description_3">One of the definitive \'80s rock albums.</string>
    <string name="album_description_4">One of the definitive \'80s rock albums.</string>
    <string name="album_description_5">One of the definitive \'80s rock albums.</string>
    <string name="album_description_6">One of the definitive \'80s rock albums.</string>
    <string name="album_description_7">One of the definitive \'80s rock albums.</string>
    <string name="album_description_8">One of the definitive \'80s rock albums.</string>
    <string name="album_description_9">One of the definitive \'80s rock albums.</string>
    <string name="album_description_10">One of the definitive \'80s rock albums.</string>
    <string name="album_title_1">Journey - Escape</string>
    <string name="album_title_2">Journey - Escape</string>
    <string name="album_title_3">Journey - Escape</string>
    <string name="album_title_4">Journey - Escape</string>
    <string name="album_title_5">Journey - Escape</string>
    <string name="album_title_6">Journey - Escape</string>
    <string name="album_title_7">Journey - Escape</string>
    <string name="album_title_8">Journey - Escape</string>
    <string name="album_title_9">Journey - Escape</string>
    <string name="album_title_10">Journey - Escape</string>
    <string name="subtotal_title">Subtotal:</string>
    <string name="tps_total_title">TPS Total:</string>
    <string name="tvq_total_title">TVQ Total:</string>
    <string name="final_total_title">Final Total:</string>
    <string name="thanking_text">Thank You for Shopping!</string>
    <string name="subtotal_number" />
    <string name="tps_total_number" />
    <string name="tvq_total_number" />
    <string name="final_total_number" />
    <string name="album_cover_1">album_cover_1</string>
    <string name="album_cover_10">album_cover_10</string>
    <string name="album_cover_2">album_cover_2</string>
    <string name="album_cover_3">album_cover_3</string>
    <string name="album_cover_4">album_cover_4</string>
    <string name="album_cover_5">album_cover_5</string>
    <string name="album_cover_6">album_cover_6</string>
    <string name="album_cover_7">album_cover_7</string>
    <string name="album_cover_8">album_cover_8</string>
    <string name="album_cover_9">album_cover_9</string>

</resources>
